--- a/KoKoAlarm/AndroidManifest.xml
+++ b/KoKoAlarm/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:name="com.orm.SugarApp"
      >
+        
         <activity
             android:name=".KoKoAlarmActivity"
             android:label="@string/app_name" >
@@ -32,6 +33,8 @@
         
         <activity android:name=".SettingAlarm"
             android:label="SettingAlarm"></activity>
+        
+        <activity android:name=".StartAlarm"></activity>
         
         <meta-data android:name="DATABASE" android:value="KoKoAlarm_app.db" />
 		<meta-data android:name="VERSION" android:value="1" />
