--- a/KoKoAlarm/AndroidManifest.xml
+++ b/KoKoAlarm/AndroidManifest.xml
@@ -8,11 +8,13 @@
         android:targetSdkVersion="15"
         
         />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:name="com.orm.SugarApp"
+        android:theme="@android:style/Theme.Holo.NoActionBar"
      >
         
         <activity
@@ -34,13 +36,15 @@
         <activity android:name=".SettingAlarm"
             android:label="SettingAlarm"></activity>
         
-        <activity android:name=".StartAlarm"></activity>
+        <activity android:name=".MainActivity"></activity>
         
         <meta-data android:name="DATABASE" android:value="KoKoAlarm_app.db" />
 		<meta-data android:name="VERSION" android:value="1" />
 		<meta-data android:name="QUERY_LOG" android:value="true" />
 		<meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="hs.mirim" />
         
+		<receiver android:name=".AlarmReceiver" android:process=":remote"></receiver>
+		
     </application>
 
 </manifest>
