--- a/KoKoAlarm/AndroidManifest.xml
+++ b/KoKoAlarm/AndroidManifest.xml
@@ -9,6 +9,7 @@
         
         />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
 
     <application
         android:icon="@drawable/icon"
@@ -39,7 +40,7 @@
         <activity android:name=".MainActivity"></activity>
         
         <meta-data android:name="DATABASE" android:value="KoKoAlarm_app.db" />
-		<meta-data android:name="VERSION" android:value="1" />
+		<meta-data android:name="VERSION" android:value="3" />
 		<meta-data android:name="QUERY_LOG" android:value="true" />
 		<meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="hs.mirim" />
         
